# MediaApp

./: CMakeLists.txt  am-config.yaml  build.sh  run.sh
apps/: CMakeLists.txt
apps/Home/: CMakeLists.txt  main.cpp
apps/Home/controllers/: Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  WindowManager.h
apps/Home/cores/: HomeEngine.cpp  HomeEngine.h
apps/Home/models/: HeaderBar.h
apps/Home/screens/: CMakeLists.txt
apps/Home/screens/central/: CMakeLists.txt  CentralResources.qrc  CentralScreen.qml  main.qml
apps/Home/screens/layers/: CMakeLists.txt  DesktopLayer.qml  PopupLayer.qml
apps/Music/: CMakeLists.txt  info.yaml  main.cpp
apps/Music/cores/: MusicEngine.cpp  MusicEngine.h
apps/Setting/: CMakeLists.txt  info.yaml  main.cpp
apps/Setting/cores/: SettingEngine.cpp  SettingEngine.h
apps/Video/: CMakeLists.txt  info.yaml  main.cpp
apps/Video/cores/: VideoEngine.cpp  VideoEngine.h
libs/: CMakeLists.txt
libs/UICommon/: CMakeLists.txt
libs/UICommon/Components/: MDAWindow.cpp  MDAWindow.h
libs/UICommon/Cores/: AbstractEngine.cpp  AbstractEngine.h  ApplicationLauncher.h  WindowManager.cpp  WindowManager.h
libs/UICommon/System/: HeaderBarInterface.cpp  HeaderBarInterface.h
